<resources>
    <string name="app_name">Calculator</string>
    <string name="button_0">0</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_00">00</string>
    <string name="button_C">C</string>
    <string name="button_brackets">()</string>
    <string name="button_percent">%</string>
    <string name="button_divide">/</string>
    <string name="button_multiply">*</string>
    <string name="button_minus">-</string>
    <string name="button_plus">+</string>
    <string name="button_equal">=</string>
    <string name="button_comma">,</string>
    <string name="textNumberField">numberField</string>
    <string name="textOperation">знак</string>
    <string name="theme1">тема1</string>
    <string name="choose_theme">Выбор темы</string>
    <string name="open_browser">open browser</string>
    <string name="theme_one">One</string>
    <string name="theme_two">Two</string>
    <string name="theme_three">Three</string>
    <string name="theme_four">Four</string>

</resources>