<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--поле для ввода значения-->

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/numberField"
        android:layout_width="@dimen/zero"
        android:layout_height="@dimen/zero"
        android:inputType="none"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textSize="@dimen/textSizeField"
        app:layout_constraintBottom_toTopOf="@+id/infoOperation"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/textNumberField" />
    <!--поле для знака операции-->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/infoOperation"
        android:layout_width="@dimen/zero"
        android:layout_height="@dimen/zero"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textSize="@dimen/textSizeField"
        app:layout_constraintBottom_toTopOf="@+id/result"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/numberField"
        tools:text="@string/textOperation" />
    <!--результат-->

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/result"
        android:layout_width="@dimen/zero"
        android:layout_height="@dimen/zero"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textSize="@dimen/textSizeField"
        app:layout_constraintBottom_toTopOf="@+id/GridLayout"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/infoOperation"
        tools:text="результат" />

    <GridLayout
        android:id="@+id/GridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/GridLayout_marginBottom"
        android:columnCount="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/result">
        <!--проверка коменнтария-->

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_C"
            style="@style/CalcButton.C"
            android:text="@string/button_C" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_brackets"
            style="@style/CalcButton"
            android:text="@string/button_brackets" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_percent"
            style="@style/CalcButton"
            android:text="@string/button_percent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_divide"
            style="@style/CalcButton"
            android:text="@string/button_divide" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_7"
            style="@style/CalcButton"
            android:text="@string/button_7" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_8"
            style="@style/CalcButton"
            android:text="@string/button_8" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_9"
            style="@style/CalcButton"
            android:text="@string/button_9" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_multiply"
            style="@style/CalcButton"
            android:text="@string/button_multiply" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_4"
            style="@style/CalcButton"
            android:text="@string/button_4" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_5"
            style="@style/CalcButton"
            android:text="@string/button_5" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_6"
            style="@style/CalcButton"
            android:text="@string/button_6" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_minus"
            style="@style/CalcButton"
            android:text="@string/button_minus" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_1"
            style="@style/CalcButton"
            android:text="@string/button_1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_2"
            style="@style/CalcButton"
            android:text="@string/button_2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_3"
            style="@style/CalcButton"
            android:text="@string/button_3" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_plus"
            style="@style/CalcButton"
            android:layout_rowSpan="3"
            android:layout_gravity="fill"
            android:text="@string/button_plus" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_0"
            style="@style/CalcButton"
            android:layout_columnSpan="2"
            android:layout_gravity="fill"
            android:text="@string/button_0" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_00"
            style="@style/CalcButton"
            android:text="@string/button_00" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_equal"
            style="@style/CalcButton"
            android:layout_columnSpan="2"
            android:layout_gravity="fill"
            android:text="@string/button_equal" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_comma"
            style="@style/CalcButton"
            android:text="@string/button_comma" />

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
