<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/GridLayout"
        app:layout_constraintTop_toTopOf="parent" />

    <GridLayout
        android:id="@+id/GridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:columnCount="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text">
        <!--проверка коменнтария-->
        <Button
            android:id="@+id/button_C"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:backgroundTint="@color/RAL1015"
            android:text="@string/button_C"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/button_brackets"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:backgroundTint="@color/RAL1015"
            android:text="@string/button_brackets"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/button_percent"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:backgroundTint="@color/RAL1015"
            android:text="@string/button_percent"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/button_divide"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:backgroundTint="@color/RAL1015"
            android:text="@string/button_divide"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/button_7"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:backgroundTint="@color/RAL1015"
            android:text="@string/button_7"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/button_8"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:backgroundTint="@color/RAL1015"
            android:text="@string/button_8"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/button_9"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:backgroundTint="@color/RAL1015"
            android:text="@string/button_9"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/button_multiply"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"

            android:backgroundTint="@color/RAL1015"
            android:text="@string/button_multiply"
            android:textColor="@color/black" />
    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
